Layout complete (maybe)

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 .in-digits {
     background-image: url('/img/back10.png')
 }
+
+.investment {
+    background-image: url('/img/advantages_back.png')
+}
